allprojects {
	apply plugin: "maven-publish"

	group="subspace.infinity"
	version="1.0.0-SNAPSHOT"

	//ext.jmeVersion = "3.1.0-stable"
	//ext.jmeVersion = "[3.3,)"
	ext.jmeVersion = "3.3.2-stable"
	ext.lemurVersion = "1.14.0"
	ext.lemurProtoVersion = "1.11.0"
	ext.lemurPropsVersion = "1.1.1"
	ext.mossVersion = "1.0.0-SNAPSHOT"
	ext.simMathVersion = "1.4.1-SNAPSHOT"
	ext.sio2Version = "1.4.0"
	ext.simEtherealVersion = "1.6.0-SNAPSHOT"
	ext.zayEsVersion = "1.3.2"
	ext.zayEsNetVersion = "1.4.2"

    repositories {
        mavenLocal()
        jcenter()
        maven { url "https://jcenter.bintray.com" }
        maven { url "https://jitpack.io" }
        maven { url "https://oss.sonatype.org/content/repositories/snapshots"}
        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
        maven { url "https://plugins.gradle.org/m2/"}
    }
}

subprojects {
    apply plugin: "checkstyle"
    apply plugin: "groovy"
	apply plugin: "java"
	apply plugin: "maven-publish"

	sourceCompatibility = 1.14

    checkstyle {
        configFile = rootProject.file("checkstyle.xml")
        configProperties = [projectRoot: "${rootDir}"]
    }

    compileJava {
        options.encoding = "UTF-8"
        options.compilerArgs << '-Xlint:cast'
        options.compilerArgs << '-Xlint:classfile'
        options.compilerArgs << '-Xlint:deprecation'
        options.compilerArgs << '-Xlint:dep-ann'
        options.compilerArgs << '-Xlint:divzero'
        options.compilerArgs << '-Xlint:empty'
        options.compilerArgs << '-Xlint:fallthrough'
        options.compilerArgs << '-Xlint:finally'
        options.compilerArgs << '-Xlint:options'
        options.compilerArgs << '-Xlint:overrides'
        options.compilerArgs << '-Xlint:path'
        options.compilerArgs << '-Xlint:processing'
        options.compilerArgs << '-Xlint:rawtypes'
        options.compilerArgs << '-Xlint:serial'
        options.compilerArgs << '-Xlint:static'
        options.compilerArgs << '-Xlint:try'
        options.compilerArgs << '-Xlint:unchecked'
        options.compilerArgs << '-Xlint:varargs'
        options.deprecation = true
    }

    dependencies {
        implementation "com.google.guava:guava:19.0"

        testImplementation(
            "junit:junit:4.12",
            "org.codehaus.groovy:groovy-all:2.4.11",
            "org.slf4j:slf4j-api:1.7.13",
            "org.apache.logging.log4j:log4j-api:2.5",
            "org.apache.logging.log4j:log4j-core:2.5"
        )

        testRuntimeOnly(
            "org.apache.logging.log4j:log4j-slf4j-impl:2.5"
        )
    }

    test {
        testLogging {
            // Uncomment and tests will run even when nothing has changed
            //outputs.upToDateWhen {false}
            showStandardStreams = true
            exceptionFormat = "full"
        }
    }
}


